template-fullwidth-no-breadcrumbs.php - Lessen spacing between heading and menu Fixed issue with text in mobile mode menu set as white

--- a/style.css
+++ b/style.css
@@ -597,6 +597,7 @@ p.site-description {
 
 	.storefront-primary-navigation, .main-navigation ul.menu ul.sub-menu, .main-navigation ul li a {
 		background-color:#ffffff;
+		color: inherit;
 	}
 
 	.site-branding{
